--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ChicagoSubs2</title>
+  <title>Chicago Subs</title>
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/yeti/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -19,10 +19,18 @@
   <%= csrf_meta_tags %>
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAj_NDdLbBs7npzMT1e2nVQ_jAM3tyAif4"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
+
+
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -71,5 +79,15 @@
 
     <%= yield %>
   </div>
+
+<!-- Script for datepicker -->
+
+  <script>
+  $(function() {
+    $( "#startdate,#enddate" ).datepicker({
+    dateFormat: "dd-mm-yy"});
+  });
+  </script>
+
 </body>
 </html>
