--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,14 +40,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">ChicagoSubs2</a>
+      <a href="/" class="navbar-brand">Chicago Subs</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/apartments">Apartments</a></li>
         <li><a href="#">About</a></li>
+        <li><a href="/apartments">See All Listings</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
