--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,9 +51,19 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+      &nbsp; &nbsp; &nbsp; &nbsp;
         <% if current_user.present? %>
-          <li><a href="/users/edit"><%= current_user.first_name %></a></li>
-          <li><a href="/users/sign_out" data-method="delete">Sign out</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+            <img class = "image-avatar-small" src=<%= current_user.profile_pic %>>&nbsp;
+            <%= current_user.first_name %>&nbsp;<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Account Overview</a></li>
+              <li><a href="/users/edit">Edit Info</a></li>
+              <li><a href="/users/sign_out">Sign Out</a></li>
+            </ul>
+          </li>
+
         <% else %>
           <li><a href="/users/sign_up">Sign up</a></li>
           <li><a href="/users/sign_in">Sign in</a></li>
