--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><a href="#">Account Overview</a></li>
               <li><a href="/users/edit">Edit Info</a></li>
-              <li><a href="/users/sign_out">Sign Out</a></li>
+              <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
             </ul>
           </li>
 
