--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,13 +32,15 @@
       <%= f.password_field :current_password, autocomplete: "off", :class => "form-control" %>
     </div>
 
-    <div class="actions">
-      <%= f.submit "Update" %>
+    <div class="form-group">
+<!--       <div class="col-sm-offset-2 col-sm-10"> -->
+        <%= f.submit "Update Password", :class => "btn btn-primary" %>
+      </div>
     </div>
+
   <% end %>
 
-<!-- <h3>Cancel my account</h3>
+<h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
- -->
-<%= link_to "Back", :back %>
+
