--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -184,7 +184,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <input type="submit" value="Update User" class="btn btn-primary">
+        <input type="submit" value="Update Profile" class="btn btn-primary">
       </div>
     </div>
   </form>
