--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -65,14 +65,16 @@
         <h1>Filter Listings</h1>
       </div>
       <div class="filter-container">
-        <div class="subcolumn3">
+<!--         <div class="subcolumn3"> -->
 
           <%= search_form_for @search do |f| %>
-            <div class="field">
+            <div class="form-group">
               <%= f.label :neighborhood_cont, "Neighborhood" %>
               <%= f.text_field :neighborhood_cont, :class => "form-control" %>
 
-              <%= f.select :neighborhood_cont, ["1", "2", "3"] %>
+              <%= f.label :neighborhood_eq, "Neighborhood" %>
+              <%= f.select :neighborhood_eq, ["1", "2", "3"], :class => "form-control" %>
+
             </div>
             <div class="actions"><%= f.submit "Filter" %></div>
           <% end %>
