--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,7 +42,7 @@
 
     <div class="form-group">
       <%= f.label :introduction %>
-      <%= f.text_field :introduction, autofocus: true, :class => "form-control" %>
+      <%= f.text_area :introduction, autofocus: true, :rows => 5, :class => "form-control" %>
     </div>
 
     <div class="form-group">
@@ -50,13 +50,15 @@
       <%= f.text_field :profile_pic, autofocus: true, :class => "form-control" %>
     </div>
 
-    <div class="actions">
-      <%= f.submit "Sign up" %>
+    <div class="form-group">
+      <%= f.submit "Sign up", :class => "btn btn-primary" %>
     </div>
 
   </div>
 </div>
 
 <% end %>
+
+
 
 <%= render "devise/shared/links" %>
