--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
 
   <script>
   $(function() {
-    $( "#startdate,#enddate" ).datepicker({
+    $( "#startdate,#enddate,#startdate_f,#enddate_f" ).datepicker({
     dateFormat: "dd-mm-yy"});
   });
   </script>
